Add collection asserts

--- a/pom.xml
+++ b/pom.xml
@@ -434,6 +434,7 @@
 	<!--modules / -->
 	<modules>
 		<module>all</module>
+		<module>collections</module>
 		<module>testing</module>
 	</modules>
 	<!--repositories / -->
@@ -448,6 +449,12 @@
 			<dependency>
 				<groupId>com.github.nhojpatrick.hamcrest</groupId>
 				<artifactId>nhojpatrick-hamcrest-all</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>com.github.nhojpatrick.hamcrest</groupId>
+				<artifactId>nhojpatrick-hamcrest-collections</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 
