Add lang asserts

--- a/pom.xml
+++ b/pom.xml
@@ -436,6 +436,7 @@
 		<module>all</module>
 		<module>collections</module>
 		<module>datetime</module>
+		<module>lang</module>
 		<module>testing</module>
 	</modules>
 	<!--repositories / -->
@@ -462,6 +463,12 @@
 			<dependency>
 				<groupId>com.github.nhojpatrick.hamcrest</groupId>
 				<artifactId>nhojpatrick-hamcrest-datetime</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>com.github.nhojpatrick.hamcrest</groupId>
+				<artifactId>nhojpatrick-hamcrest-lang</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 
