--- a/pom.xml
+++ b/pom.xml
@@ -479,6 +479,12 @@
 			</dependency>
 
 			<dependency>
+				<groupId>org.junit.platform</groupId>
+				<artifactId>junit-platform-launcher</artifactId>
+				<version>${version.latest.junit.platform}</version>
+			</dependency>
+
+			<dependency>
 				<groupId>org.junit.vintage</groupId>
 				<artifactId>junit-vintage-engine</artifactId>
 				<version>${version.latest.junit.vintage}</version>
