--- a/datetime/pom.xml
+++ b/datetime/pom.xml
@@ -39,6 +39,7 @@
 		<dependency>
 			<groupId>com.github.nhojpatrick.hamcrest</groupId>
 			<artifactId>nhojpatrick-hamcrest-testing</artifactId>
+			<scope>test</scope>
 		</dependency>
 
 		<dependency>
