--- a/pom.xml
+++ b/pom.xml
@@ -450,13 +450,7 @@
 
 			<dependency>
 				<groupId>org.hamcrest</groupId>
-				<artifactId>hamcrest-all</artifactId>
-				<version>${version.latest.hamcrest}</version>
-			</dependency>
-
-			<dependency>
-				<groupId>org.hamcrest</groupId>
-				<artifactId>hamcrest-core</artifactId>
+				<artifactId>hamcrest</artifactId>
 				<version>${version.latest.hamcrest}</version>
 			</dependency>
 
@@ -525,7 +519,7 @@
 		<project.custom.failsafe.argLine.jpms></project.custom.failsafe.argLine.jpms>
 		<project.custom.surefire.argLine.jpms></project.custom.surefire.argLine.jpms>
 		<!-- -->
-		<version.latest.hamcrest>1.3</version.latest.hamcrest>
+		<version.latest.hamcrest>2.1-rc4</version.latest.hamcrest>
 		<version.latest.junit.jupiter>5.3.1</version.latest.junit.jupiter>
 		<version.latest.junit.platform>1.3.1</version.latest.junit.platform>
 		<version.latest.junit.vintage>5.3.1</version.latest.junit.vintage>
