--- a/datetime/pom.xml
+++ b/datetime/pom.xml
@@ -44,7 +44,7 @@
 
 		<dependency>
 			<groupId>org.hamcrest</groupId>
-			<artifactId>hamcrest-core</artifactId>
+			<artifactId>hamcrest</artifactId>
 		</dependency>
 
 		<dependency>
