--- a/testing/pom.xml
+++ b/testing/pom.xml
@@ -38,7 +38,7 @@
 
 		<dependency>
 			<groupId>org.hamcrest</groupId>
-			<artifactId>hamcrest-core</artifactId>
+			<artifactId>hamcrest</artifactId>
 		</dependency>
 
 		<dependency>
