--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<packaging>pom</packaging>
 	<!--name / -->
 	<!--version / -->
-	<version>1.0.0</version>
+	<version>1.0.0-hamcrest-2.1</version>
 	<!--description / -->
 	<!--url / -->
 	<!--prerequisites / -->
