--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<packaging>pom</packaging>
 	<!--name / -->
 	<!--version / -->
-	<version>1.0.0-hamcrest-2.1</version>
+	<version>1.0.0</version>
 	<!--description / -->
 	<!--url / -->
 	<!--prerequisites / -->
@@ -519,7 +519,7 @@
 		<project.custom.failsafe.argLine.jpms></project.custom.failsafe.argLine.jpms>
 		<project.custom.surefire.argLine.jpms></project.custom.surefire.argLine.jpms>
 		<!-- -->
-		<version.latest.hamcrest>2.1-rc4</version.latest.hamcrest>
+		<version.latest.hamcrest>2.1</version.latest.hamcrest>
 		<version.latest.junit.jupiter>5.3.1</version.latest.junit.jupiter>
 		<version.latest.junit.platform>1.3.1</version.latest.junit.platform>
 		<version.latest.junit.vintage>5.3.1</version.latest.junit.vintage>
