--- a/pom.xml
+++ b/pom.xml
@@ -171,40 +171,40 @@
 					</configuration>
 				</plugin>
 
-				<plugin>
-					<groupId>com.github.spotbugs</groupId>
-					<artifactId>spotbugs-maven-plugin</artifactId>
-					<version>3.1.9</version>
-					<configuration>
-						<debug>true</debug>
-						<effort>Max</effort>
-						<threshold>Low</threshold>
-						<failOnError>true</failOnError>
-						<!--<excludeFilterFile>spotbugs-exclude.xml</excludeFilterFile>-->
-						<!--<excludeFilterFile>${session.executionRootDirectory}/spotbugs-security-exclude.xml</excludeFilterFile>-->
-						<!--<includeFilterFile>spotbugs-include.xml</includeFilterFile>-->
-						<!--<includeFilterFile>${session.executionRootDirectory}/spotbugs-security-include.xml</includeFilterFile>-->
-						<plugins>
-							<plugin>
-								<groupId>com.h3xstream.findsecbugs</groupId>
-								<artifactId>findsecbugs-plugin</artifactId>
-								<version>1.8.0</version>
-							</plugin>
-							<plugin>
-								<groupId>com.mebigfatguy.fb-contrib</groupId>
-								<artifactId>fb-contrib</artifactId>
-								<version>7.4.3</version>
-							</plugin>
-						</plugins>
-					</configuration>
-					<dependencies>
-						<dependency>
-							<groupId>com.github.spotbugs</groupId>
-							<artifactId>spotbugs</artifactId>
-							<version>3.1.9</version>
-						</dependency>
-					</dependencies>
-				</plugin>
+				<!--<plugin>-->
+					<!--<groupId>com.github.spotbugs</groupId>-->
+					<!--<artifactId>spotbugs-maven-plugin</artifactId>-->
+					<!--<version>3.1.9</version>-->
+					<!--<configuration>-->
+						<!--<debug>true</debug>-->
+						<!--<effort>Max</effort>-->
+						<!--<threshold>Low</threshold>-->
+						<!--<failOnError>true</failOnError>-->
+						<!--&lt;!&ndash;<excludeFilterFile>spotbugs-exclude.xml</excludeFilterFile>&ndash;&gt;-->
+						<!--&lt;!&ndash;<excludeFilterFile>${session.executionRootDirectory}/spotbugs-security-exclude.xml</excludeFilterFile>&ndash;&gt;-->
+						<!--&lt;!&ndash;<includeFilterFile>spotbugs-include.xml</includeFilterFile>&ndash;&gt;-->
+						<!--&lt;!&ndash;<includeFilterFile>${session.executionRootDirectory}/spotbugs-security-include.xml</includeFilterFile>&ndash;&gt;-->
+						<!--<plugins>-->
+							<!--<plugin>-->
+								<!--<groupId>com.h3xstream.findsecbugs</groupId>-->
+								<!--<artifactId>findsecbugs-plugin</artifactId>-->
+								<!--<version>1.8.0</version>-->
+							<!--</plugin>-->
+							<!--<plugin>-->
+								<!--<groupId>com.mebigfatguy.fb-contrib</groupId>-->
+								<!--<artifactId>fb-contrib</artifactId>-->
+								<!--<version>7.4.3</version>-->
+							<!--</plugin>-->
+						<!--</plugins>-->
+					<!--</configuration>-->
+					<!--<dependencies>-->
+						<!--<dependency>-->
+							<!--<groupId>com.github.spotbugs</groupId>-->
+							<!--<artifactId>spotbugs</artifactId>-->
+							<!--<version>3.1.9</version>-->
+						<!--</dependency>-->
+					<!--</dependencies>-->
+				<!--</plugin>-->
 
 				<plugin>
 					<groupId>org.jacoco</groupId>
@@ -335,18 +335,18 @@
 				</executions>
 			</plugin>
 
-			<plugin>
-				<groupId>com.github.spotbugs</groupId>
-				<artifactId>spotbugs-maven-plugin</artifactId>
-				<!--<executions>-->
-					<!--<execution>-->
-						<!--<phase>verify</phase>-->
-						<!--<goals>-->
-							<!--<goal>check</goal>-->
-						<!--</goals>-->
-					<!--</execution>-->
-				<!--</executions>-->
-			</plugin>
+			<!--<plugin>-->
+				<!--<groupId>com.github.spotbugs</groupId>-->
+				<!--<artifactId>spotbugs-maven-plugin</artifactId>-->
+				<!--&lt;!&ndash;<executions>&ndash;&gt;-->
+					<!--&lt;!&ndash;<execution>&ndash;&gt;-->
+						<!--&lt;!&ndash;<phase>verify</phase>&ndash;&gt;-->
+						<!--&lt;!&ndash;<goals>&ndash;&gt;-->
+							<!--&lt;!&ndash;<goal>check</goal>&ndash;&gt;-->
+						<!--&lt;!&ndash;</goals>&ndash;&gt;-->
+					<!--&lt;!&ndash;</execution>&ndash;&gt;-->
+				<!--&lt;!&ndash;</executions>&ndash;&gt;-->
+			<!--</plugin>-->
 
 		</plugins>
 	</build>
