--- a/pom.xml
+++ b/pom.xml
@@ -499,11 +499,11 @@
 		<project.build.sourceEncoding>${project.custom.encoding}</project.build.sourceEncoding>
 		<project.build.outputEncoding>${project.custom.encoding}</project.build.outputEncoding>
 		<project.reporting.outputEncoding>${project.custom.encoding}</project.reporting.outputEncoding>
-		<!-- -->
+		<!-- maven plugins user properties -->
 		<downloadSources>true</downloadSources>
 		<downloadJavadocs>true</downloadJavadocs>
 		<generateBackupPoms>false</generateBackupPoms>
-		<!-- Surefire/Failsafe -->
+		<!-- Surefire/Failsafe jpms override(s) -->
 		<project.custom.failsafe.argLine.jpms></project.custom.failsafe.argLine.jpms>
 		<project.custom.surefire.argLine.jpms></project.custom.surefire.argLine.jpms>
 		<!-- -->
