--- a/pom.xml
+++ b/pom.xml
@@ -311,7 +311,7 @@
 						<configuration>
 							<rules>
 								<requireJavaVersion>
-									<version>[1.8,)</version>
+									<version>[1.8,9),[11,)</version>
 								</requireJavaVersion>
 								<requireMavenVersion>
 									<version>[3.6.1,)</version>
