--- a/pom.xml
+++ b/pom.xml
@@ -208,87 +208,12 @@
 					<version>0.8.4</version>
 					<executions>
 						<execution>
-							<id>default-prepare-agent</id>
+							<id>jacoco-prepare-agent</id>
 							<goals>
 								<goal>prepare-agent</goal>
 							</goals>
 						</execution>
-						<execution>
-							<id>default-report</id>
-							<phase>site</phase>
-							<goals>
-								<goal>report</goal>
-							</goals>
-						</execution>
-						<execution>
-							<id>default-check</id>
-							<goals>
-								<goal>check</goal>
-							</goals>
-							<configuration>
-								<rules>
-									<rule>
-										<element>BUNDLE</element>
-										<!--<element>CLASS</element>-->
-										<!--<excludes>-->
-										<!--<exclude>*Test</exclude>-->
-										<!--</excludes>-->
-										<limits>
-											<limit>
-												<counter>LINE</counter>
-												<value>COVEREDRATIO</value>
-												<minimum>50%</minimum>
-											</limit>
-										</limits>
-									</rule>
-								</rules>
-								<!--<rules>-->
-								<!--<rule>-->
-								<!--<element>BUNDLE</element>-->
-								<!--<limits>-->
-								<!--<limit>-->
-								<!--<counter>COMPLEXITY</counter>-->
-								<!--<value>COVEREDRATIO</value>-->
-								<!--<minimum>0.99</minimum>-->
-								<!--</limit>-->
-								<!--</limits>-->
-								<!--</rule>-->
-								<!--</rules>-->
-								<haltOnFailure>false</haltOnFailure>
-							</configuration>
-						</execution>
 					</executions>
-					<configuration>
-						<rules>
-							<rule>
-								<element>BUNDLE</element>
-								<!--<element>CLASS</element>-->
-								<!--<excludes>-->
-								<!--<exclude>*Test</exclude>-->
-								<!--</excludes>-->
-								<limits>
-									<limit>
-										<counter>LINE</counter>
-										<value>COVEREDRATIO</value>
-										<minimum>60%</minimum>
-									</limit>
-								</limits>
-							</rule>
-						</rules>
-						<!--<rules>-->
-						<!--<rule>-->
-						<!--<element>BUNDLE</element>-->
-						<!--<limits>-->
-						<!--<limit>-->
-						<!--<counter>COMPLEXITY</counter>-->
-						<!--<value>COVEREDRATIO</value>-->
-						<!--<minimum>0.99</minimum>-->
-						<!--</limit>-->
-						<!--</limits>-->
-						<!--</rule>-->
-						<!--</rules>-->
-						<!--<haltOnFailure>false</haltOnFailure>-->
-					</configuration>
 				</plugin>
 
 			</plugins>
@@ -331,6 +256,11 @@
 				</executions>
 			</plugin>
 
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+			</plugin>
+
 		</plugins>
 	</build>
 	<!--profiles / -->
@@ -369,6 +299,68 @@
 				<project.failsafe.argLine.jpms>${project.failsafe.argLine.jpms.global} ${project.failsafe.argLine.jpms.module}</project.failsafe.argLine.jpms>
 				<project.surefire.argLine.jpms>${project.surefire.argLine.jpms.global} ${project.surefire.argLine.jpms.module}</project.surefire.argLine.jpms>
 			</properties>
+		</profile>
+		<profile>
+			<id>qa_jacoco</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.jacoco</groupId>
+						<artifactId>jacoco-maven-plugin</artifactId>
+						<executions>
+							<execution>
+								<id>jacoco-check</id>
+								<phase>validate</phase>
+								<goals>
+									<goal>check</goal>
+								</goals>
+								<configuration>
+									<rules>
+										<rule>
+											<element>BUNDLE</element>
+											<excludes>
+												<exclude>*Test</exclude>
+												<exclude>*IT</exclude>
+											</excludes>
+											<limits>
+												<limit>
+													<counter>LINE</counter>
+													<value>COVEREDRATIO</value>
+													<minimum>${jacoco.bundle.line.coveredratio}</minimum>
+												</limit>
+												<limit>
+													<counter>CLASS</counter>
+													<value>MISSEDCOUNT</value>
+													<maximum>${jacoco.bundle.class.missedcount}</maximum>
+												</limit>
+											</limits>
+										</rule>
+										<!--										<rule>-->
+										<!--											<element>CLASS</element>-->
+										<!--											<excludes>-->
+										<!--												<exclude>*Test</exclude>-->
+										<!--												<exclude>*IT</exclude>-->
+										<!--											</excludes>-->
+										<!--											<limits>-->
+										<!--												<limit>-->
+										<!--													<counter>LINE</counter>-->
+										<!--													<value>COVEREDRATIO</value>-->
+										<!--													<minimum>${jacoco.class.line.coveredratio}</minimum>-->
+										<!--												</limit>-->
+										<!--												<limit>-->
+										<!--													<counter>CLASS</counter>-->
+										<!--													<value>MISSEDCOUNT</value>-->
+										<!--													<maximum>${jacoco.class.class.missedcount}</maximum>-->
+										<!--												</limit>-->
+										<!--											</limits>-->
+										<!--										</rule>-->
+									</rules>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
 		</profile>
 		<profile>
 			<id>qa_spotbugs</id>
@@ -568,5 +560,8 @@
 		<version.org.slf4j>1.7.27</version.org.slf4j>
 		<!-- -->
 		<project.Automatic-Module-Name></project.Automatic-Module-Name>
+		<jacoco.bundle.line.coveredratio>54%</jacoco.bundle.line.coveredratio>
+		<jacoco.bundle.class.missedcount>15</jacoco.bundle.class.missedcount>
+		<spotbugs.maxAllowedViolations>0</spotbugs.maxAllowedViolations>
 	</properties>
 </project>
