--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,18 @@
 	<build>
 		<pluginManagement>
 			<plugins>
+				<plugin>
+					<groupId>com.github.ekryd.sortpom</groupId>
+					<artifactId>sortpom-maven-plugin</artifactId>
+					<version>2.10.0</version>
+					<dependencies>
+						<dependency>
+							<groupId>com.github.nhojpatrick.sortpom</groupId>
+							<artifactId>nhojpatrick-sortpom-sortorderfile</artifactId>
+							<version>1</version>
+						</dependency>
+					</dependencies>
+				</plugin>
 
 				<plugin>
 					<groupId>com.github.spotbugs</groupId>
@@ -382,6 +394,26 @@
 			</build>
 		</profile>
 		<profile>
+			<id>sortpom</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>com.github.ekryd.sortpom</groupId>
+						<artifactId>sortpom-maven-plugin</artifactId>
+						<executions>
+							<execution>
+								<id>sortpom-sort</id>
+								<phase>validate</phase>
+								<goals>
+									<goal>sort</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		<profile>
 			<id>versions</id>
 			<build>
 				<plugins>
@@ -558,5 +590,11 @@
 		<jacoco.bundle.line.coveredratio>54%</jacoco.bundle.line.coveredratio>
 		<jacoco.bundle.class.missedcount>15</jacoco.bundle.class.missedcount>
 		<spotbugs.maxAllowedViolations>0</spotbugs.maxAllowedViolations>
+		<!-- sortpom -->
+		<sort.createBackupFile>false</sort.createBackupFile>
+		<sort.nrOfIndentSpace>-1</sort.nrOfIndentSpace>
+		<sort.sortDependencies>groupId,artifactId,version,scope</sort.sortDependencies>
+		<sort.sortModules>true</sort.sortModules>
+		<sort.sortOrderFile>com/github/nhojpatrick/sortpom/sortorderfile/nhojpatrick.xml</sort.sortOrderFile>
 	</properties>
 </project>
