--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,11 @@
 					<!--					</configuration>-->
 				</plugin>
 				<plugin>
+					<groupId>io.takari</groupId>
+					<artifactId>maven</artifactId>
+					<version>0.7.6</version>
+				</plugin>
+				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-clean-plugin</artifactId>
 					<version>3.1.0</version>
@@ -407,6 +412,26 @@
 									<goal>display-parent-updates</goal>
 									<goal>display-plugin-updates</goal>
 									<goal>display-property-updates</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		<profile>
+			<id>wrapper</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>io.takari</groupId>
+						<artifactId>maven</artifactId>
+						<executions>
+							<execution>
+								<id>wrapper-latest</id>
+								<phase>validate</phase>
+								<goals>
+									<goal>wrapper</goal>
 								</goals>
 							</execution>
 						</executions>
