--- a/collections/pom.xml
+++ b/collections/pom.xml
@@ -78,6 +78,7 @@
 	<!--properties / -->
 	<properties>
 		<project.Automatic-Module-Name>com.github.nhojpatrick.hamcrest.collections</project.Automatic-Module-Name>
+		<checkstyle.maxAllowedViolations>74</checkstyle.maxAllowedViolations>
 		<spotbugs.maxAllowedViolations>8</spotbugs.maxAllowedViolations>
 	</properties>
 </project>
