--- a/datetime/pom.xml
+++ b/datetime/pom.xml
@@ -78,5 +78,6 @@
 	<!--properties / -->
 	<properties>
 		<project.Automatic-Module-Name>com.github.nhojpatrick.hamcrest.datetime</project.Automatic-Module-Name>
+		<checkstyle.maxAllowedViolations>258</checkstyle.maxAllowedViolations>
 	</properties>
 </project>
