--- a/optionals/pom.xml
+++ b/optionals/pom.xml
@@ -78,5 +78,6 @@
 	<!--properties / -->
 	<properties>
 		<project.Automatic-Module-Name>com.github.nhojpatrick.hamcrest.optionals</project.Automatic-Module-Name>
+		<checkstyle.maxAllowedViolations>23</checkstyle.maxAllowedViolations>
 	</properties>
 </project>
