--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,13 @@
 					<!--							</plugin>-->
 					<!--						</plugins>-->
 					<!--					</configuration>-->
+					<dependencies>
+						<dependency>
+							<groupId>com.github.spotbugs</groupId>
+							<artifactId>spotbugs</artifactId>
+							<version>3.1.12</version>
+						</dependency>
+					</dependencies>
 				</plugin>
 				<plugin>
 					<groupId>io.takari</groupId>
