--- a/datetime/pom.xml
+++ b/datetime/pom.xml
@@ -79,5 +79,7 @@
 	<properties>
 		<project.Automatic-Module-Name>com.github.nhojpatrick.hamcrest.datetime</project.Automatic-Module-Name>
 		<checkstyle.maxAllowedViolations>258</checkstyle.maxAllowedViolations>
+		<jacoco.bundle.line.coveredratio>54%</jacoco.bundle.line.coveredratio>
+		<jacoco.bundle.class.missedcount>15</jacoco.bundle.class.missedcount>
 	</properties>
 </project>
