--- a/pom.xml
+++ b/pom.xml
@@ -593,6 +593,11 @@
 				<version>${version.org.apache.commons.lang3}</version>
 			</dependency>
 			<dependency>
+				<groupId>org.apache.logging.log4j</groupId>
+				<artifactId>log4j-slf4j-impl</artifactId>
+				<version>${version.org.apache.logging.log4j}</version>
+			</dependency>
+			<dependency>
 				<groupId>org.hamcrest</groupId>
 				<artifactId>hamcrest</artifactId>
 				<version>${version.org.hamcrest}</version>
@@ -615,11 +620,6 @@
 			<dependency>
 				<groupId>org.slf4j</groupId>
 				<artifactId>slf4j-api</artifactId>
-				<version>${version.org.slf4j}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.slf4j</groupId>
-				<artifactId>slf4j-log4j12</artifactId>
 				<version>${version.org.slf4j}</version>
 			</dependency>
 		</dependencies>
@@ -654,6 +654,7 @@
 		<!-- -->
 		<version.com.puppycrawl.tools.checkstyle>8.23</version.com.puppycrawl.tools.checkstyle>
 		<version.org.apache.commons.lang3>3.9</version.org.apache.commons.lang3>
+		<version.org.apache.logging.log4j>2.12.0</version.org.apache.logging.log4j>
 		<version.org.hamcrest>2.1</version.org.hamcrest>
 		<version.org.spotbugs>3.1.12</version.org.spotbugs>
 		<version.org.junit.jupiter>5.5.1</version.org.junit.jupiter>
